remove insecure img urls

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   <router-outlet></router-outlet>
 </div>
 <ng-container *ngIf="!!isPageLoaded">
-  <img src="http://www.arcelormittal.com/distributionsolutions/content/images/reload_captcha.png" class="loading center" />
+  <img src="../assets/imgs/loading.jpg" class="loading center" />
 </ng-container>
