--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,3 +1,31 @@
-<p>
-  register works!
-</p>
+<form [formGroup]="form">
+  <fieldset>
+    <legend>Register</legend>
+    <div class="form-field">
+      <label>First name:</label>
+      <input name="firstName" formControlName="firstName">
+    </div>
+    <div class="form-field">
+      <label>Last name:</label>
+      <input name="lastName" formControlName="lastName">
+    </div>
+    <div class="form-field">
+      <label>Email:</label>
+      <input name="username" formControlName="username">
+    </div>
+    <div class="form-field">
+      <label>Password:</label>
+      <input name="password" formControlName="password"
+             type="password">
+    </div>
+    <div class="form-field">
+      <label>Confirm Password :</label>
+      <input name="passwordConfirm" formControlName="passwordConfirm"
+             type="password">
+    </div>
+  </fieldset>
+  <div class="form-buttons">
+    <button class="button button-primary"
+            (click)="register()">Register</button>
+  </div>
+</form>
